--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<aside class="sidebar">
 				<h2 class="section-title">All posts</h2>
 				<ul class="list titles">
-
+					<!-- li -->
+					<!-- after -->
 				</ul>
 			</aside>
 			<section class="posts">
