--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
 			</main>
 		</div>
 	</div>
+	<script id="template-article-link" type="text/x-handlebars-template">
+       <li class="class-li"><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+     </script>
+	<script id="template-article-author" type="text/x-handlebars-template">
+       <li class="list"><a href="#{{ id }}"><span>{{ authorName }}</span></a></li>
+     </script>
+	<script id="template-article-tag" type="text/x-handlebars-template">
+       <li class="class-li-tag"><a href="#{{ id }}"><span>{{ tagName }}</span></a></li>
+     </script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
