--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 	<script id="template-article-tag" type="text/x-handlebars-template">
        <li class="class-li-tag"><a href="#{{ id }}"><span>{{ tagName }}</span></a></li>
      </script>
+	<script id="template-tag-cloud-link" type="text/x-handlebars-template">
+       <li class="class-li"><a href="#{{ id }}"><span>{{ tags }}</span></a></li>
+     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
